RESOLVED FIXED130992
REGRESSION(r166415): JSObject{Get,Set}Private() don't work with proxies objects
https://bugs.webkit.org/show_bug.cgi?id=130992
Summary REGRESSION(r166415): JSObject{Get,Set}Private() don't work with proxies objects
Michael Saboff
Reported 2014-03-31 16:15:57 PDT
The global object returned from JSContextGetGlobalObject() is actually wrapped by a JSProxy object. The JSObjectGetPrivate() and JSObjectSetPrivate() don't work with the wrapped object. The JSProxy was added in r166415 - <http://trac.webkit.org/changeset/166415>
Attachments
Patch (3.00 KB, patch)
2014-03-31 16:32 PDT, Michael Saboff
mhahnenberg: review+
Michael Saboff
Comment 1 2014-03-31 16:32:27 PDT
Mark Hahnenberg
Comment 2 2014-03-31 16:34:45 PDT
Comment on attachment 228219 [details] Patch r=me
Michael Saboff
Comment 3 2014-03-31 18:11:07 PDT
Note You need to log in before you can comment on or make changes to this bug.