REGRESSION(r166415): JSObject{Get,Set}Private() don't work with proxies objects https://bugs.webkit.org/show_bug.cgi?id=130992

Reviewed by Mark Hahnenberg.

Forward JSObjectGetPrivate() and JSObjectSetPrivate() to the wrapped object.

* API/JSObjectRef.cpp:
(JSObjectGetPrivate):
(JSObjectSetPrivate):
* API/tests/testapi.c:
(main): Added new test case to validate we are properly foarwarding.


Canonical link: https://commits.webkit.org/149064@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@166554 268f45cc-cd09-0410-ab3c-d52691b4dbfc